profile screen,mediaquery

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   location: ^6.0.1
   google_fonts: ^6.2.1
   flutter_hooks: ^0.20.5
+  shimmer: ^3.0.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
